test/tests/stages/18_structures/invalid_parse/extra_credit/union_bad_type_spec.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[5]:
  union
  identifier(x)
  long
  identifier(a)
  ;
